...
        android:id="@+id/llpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eT_app_pass_crea_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_weight="1"
            android:hint="@string/enter_password_hint"
...
        android:id="@+id/llpassword_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eT_app_pass_crea_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_weight="1"
            android:hint="@string/confirm_password_hint"
...
